--- a/bitrix/templates/main/3-1services-inner.html
+++ b/bitrix/templates/main/3-1services-inner.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=1024">
 	<link rel="stylesheet" href="css/screen.css">
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3&amp;key=AIzaSyA5YZJzqmYccat0wSPnagC9TXPP4xTugFM"></script>
 	<script src="js/common.js"></script>
 </head>
 <div class="out">
@@ -145,6 +146,12 @@
 			<div data-direction="1" class="letters_item letters-e parallax">E</div>
 		</div>
 	</footer>
+	<div class="loader__wrapper">
+		<svg width="300px" height="200px" viewbox="0 0 187.3 93.7" preserveaspectratio="xMidYMid meet" style="left: 50%; top: 50%; position: absolute; transform: translate(-50%, -50%) matrix(1, 0, 0, 1, 0, 0);">
+			<path id="outline" stroke="#fd2f2f" fill="none" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M93.9,46.4c9.3,9.5,13.8,17.9,23.5,17.9s17.5-7.8,17.5-17.5s-7.8-17.6-17.5-17.5c-9.7,0.1-13.3,7.2-22.1,17.1         c-8.9,8.8-15.7,17.9-25.4,17.9s-17.5-7.8-17.5-17.5s7.8-17.5,17.5-17.5S86.2,38.6,93.9,46.4z">  </path>
+			<path id="outline-bg" opacity="0.05" fill="none" stroke="grey" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="       M93.9,46.4c9.3,9.5,13.8,17.9,23.5,17.9s17.5-7.8,17.5-17.5s-7.8-17.6-17.5-17.5c-9.7,0.1-13.3,7.2-22.1,17.1         c-8.9,8.8-15.7,17.9-25.4,17.9s-17.5-7.8-17.5-17.5s7.8-17.5,17.5-17.5S86.2,38.6,93.9,46.4z"></path>
+		</svg>
+	</div>
 </div>
 <div id="navigation" class="navigation">
 	<div class="navigation__container">
@@ -172,7 +179,7 @@
 						<ul>
 							<li><a href="3-1services-inner.html">Mounting</a></li>
 							<li><a href="4-1designers.html">Designers</a></li>
-							<li><a href="#">interior design</a></li>
+							<li><a href="404.html">interior design</a></li>
 						</ul>
 					</ul>
 				</div>
