--- a/src/jade/2-0about.jade
+++ b/src/jade/2-0about.jade
@@ -109,7 +109,7 @@ head
 
 
         //видео по желанию <video autoplay loop></video>
-        .task__projects.parallax(data-speed='15',data-direction='1')
+        .task__projects.service-inner.parallax(data-speed='15',data-direction='1')
           .product_selector
             .product_selector-photo.photo_right.parallax(data-speed='10',data-direction='-1')
               img(src="/img/projects/here.jpg", alt="")
