--- a/src/jade/_head.jade
+++ b/src/jade/_head.jade
@@ -3,4 +3,5 @@ meta(http-equiv='X-UA-Compatible', content='IE=edge')
 meta(name='description', content='')
 meta(name='viewport', content='width=1024')
 link(rel='stylesheet', href='css/screen.css')
+script(type='text/javascript', src='https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyA5YZJzqmYccat0wSPnagC9TXPP4xTugFM')
 script(src='js/common.js')
