--- a/src/jade/_menu.jade
+++ b/src/jade/_menu.jade
@@ -31,7 +31,7 @@
               li
                 a(href='4-1designers.html') Designers
               li
-                a(href='#') interior design
+                a(href='404.html') interior design
         .column
           ul
             li
