--- a/bitrix/templates/main/404.html
+++ b/bitrix/templates/main/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>4-0designers</title>
+	<title>1-0projects-inner</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="">
@@ -60,128 +60,14 @@
 			<div class="column"></div>
 		</div>
 	</div>
-	<div class="wrapper">
-		<section class="section">
-			<div class="section__head head__projects-inner">
-				<div class="head__projects-bg head-about"><img src="img/projects/projects.jpg" alt=""></div>
-				<div data-speed="5" class="lead parallax">
-					<div class="title"># designers</div>
-				</div>
-			</div>
-			<div class="container">
-				<div class="task__projects">
-					<div class="product_selector product-about">
-						<div class="product_selector-item">
-							<div class="product__head">Our designers</div>
-						</div>
-						<div class="product_selector-item">
-							<div class="text text-first">
-								<p>Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic</p>
-							</div>
-						</div>
-						<div class="product_selector-item big-text">
-							<div class="text">
-								<p>Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="projects">
-					<div class="projects__container">
-						<div class="project__grid project__grid-designers">
-							<div data-speed="10" data-direction="1" class="projects-col parallax"><a href="" class="project__item"><span data-speed="25" data-direction="-1" class="counter parallax">54.</span>
-									<div class="project__media"><img src="img/designer/howard.jpg" alt="" data-speed="5" data-direction="-1" class="parallax"></div>
-									<div class="project__name">
-										<div class="name"><span>Dasha Chernaia</span></div>
-										<div class="category">interior design</div>
-									</div></a></div>
-							<div data-speed="25" class="projects-col parallax"><a href="" class="project__item"><span data-speed="25" data-direction="-1" class="counter parallax">54.</span>
-									<div class="project__media"><img src="img/designer/designer2.jpg" alt="" data-speed="5" data-direction="-1" class="parallax"></div>
-									<div class="project__name">
-										<div class="name"><span>Dasha Chernaia</span></div>
-										<div class="category">interior design</div>
-									</div></a></div>
-							<div data-speed="15" class="projects-col parallax"><a href="" class="project__item"><span data-speed="25" data-direction="-1" class="counter parallax">54.</span>
-									<div class="project__media"><img src="img/designer/howard.jpg" alt="" data-speed="5" data-direction="-1" class="parallax"></div>
-									<div class="project__name">
-										<div class="name"><span>Dasha Chernaia</span></div>
-										<div class="category">design design</div>
-									</div></a></div>
-							<div data-speed="25" class="projects-col parallax"><a href="" class="project__item"><span data-speed="25" data-direction="-1" class="counter parallax">54.</span>
-									<div class="project__media"><img src="img/projects/small.jpg" alt="" data-speed="5" data-direction="-1" class="parallax"></div>
-									<div class="project__name">
-										<div class="name"><span>Dasha Chernaia</span></div>
-										<div class="category">interior design</div>
-									</div></a></div>
-						</div>
-						<div class="project__grid project__grid-designers">
-							<div data-speed="10" data-direction="1" class="projects-col parallax"><a href="" class="project__item"><span data-speed="25" data-direction="-1" class="counter parallax">04.</span>
-									<div class="project__media"><img src="img/designer/howard.jpg" alt="" data-speed="5" data-direction="-1" class="parallax"></div>
-									<div class="project__name">
-										<div class="name"><span>Dasha Chernaia</span></div>
-										<div class="category">interior design</div>
-									</div></a></div>
-							<div data-speed="25" class="projects-col parallax"><a href="" class="project__item"><span data-speed="25" data-direction="-1" class="counter parallax">57.</span>
-									<div class="project__media"><img src="img/designer/designer2.jpg" alt="" data-speed="5" data-direction="-1" class="parallax"></div>
-									<div class="project__name">
-										<div class="name"><span>Dasha Chernaia</span></div>
-										<div class="category">interior design</div>
-									</div></a></div>
-							<div data-speed="15" class="projects-col parallax"><a href="" class="project__item"><span data-speed="25" data-direction="-1" class="counter parallax">54.</span>
-									<div class="project__media"><img src="img/designer/howard.jpg" alt="" data-speed="5" data-direction="-1" class="parallax"></div>
-									<div class="project__name">
-										<div class="name"><span>Dasha Chernaia</span></div>
-										<div class="category">design design</div>
-									</div></a></div>
-							<div data-speed="25" class="projects-col parallax"><a href="" class="project__item"><span data-speed="25" data-direction="-1" class="counter parallax">54.</span>
-									<div class="project__media"><img src="img/projects/small.jpg" alt="" data-speed="5" data-direction="-1" class="parallax"></div>
-									<div class="project__name">
-										<div class="name"><span>Dasha Chernaia</span></div>
-										<div class="category">interior design</div>
-									</div></a></div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<section class="section section__links"><a href="#" data-speed="15" class="links parallax">
-				<div class="section_container">
-					<div class="topper">you can see</div>
-					<div class="middle">
-						<div style="background-image: url('../img/mask.jpg')" class="text">see projects</div>
-						<div class="arrow">
-							<div style="background-image: url('../img/icons/arrow.png')" class="icon"></div>
-						</div>
-					</div>
-				</div></a></section>
-	</div>
-	<footer class="footer">
-		<div class="mapping">
-			<div data-speed="20" class="block-address parallax">
-				<div class="block-address_title">address</div>
-				<div class="block-address_container">
-					<p>220012 Minsk</p>
-					<p>Nezavisimosti prospect</p>
-					<p>177-56 office 56</p>
-				</div>
-			</div>
-			<div data-speed="20" class="block-address contact parallax">
-				<ul class="dash-list">
-					<li>+375 17 394 21 54</li>
-					<li><a href="mailto:" class="mail">PRESTIGE@GMAIL.COM</a></li>
-				</ul>
-			</div>
-			<div data-speed="20" class="link-case parallax"><a href="#" class="link-dash">+contacts</a></div>
+	<div class="wrapper wrapper-error">
+		<div class="error__container">
+			<div class="error__text"># 404</div>
+			<div class="error__msg"><span>Page not found</span></div>
 		</div>
 		<div class="letters">
-			<div data-direction="1" class="letters_item letters-e parallax">E</div>
+			<div data-speed="15" data-direction="1" class="letters_item letters-a parallax">not found</div>
 		</div>
-	</footer>
-	<div class="loader__wrapper">
-		<svg width="300px" height="200px" viewbox="0 0 187.3 93.7" preserveaspectratio="xMidYMid meet" style="left: 50%; top: 50%; position: absolute; transform: translate(-50%, -50%) matrix(1, 0, 0, 1, 0, 0);">
-			<path id="outline" stroke="#fd2f2f" fill="none" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M93.9,46.4c9.3,9.5,13.8,17.9,23.5,17.9s17.5-7.8,17.5-17.5s-7.8-17.6-17.5-17.5c-9.7,0.1-13.3,7.2-22.1,17.1         c-8.9,8.8-15.7,17.9-25.4,17.9s-17.5-7.8-17.5-17.5s7.8-17.5,17.5-17.5S86.2,38.6,93.9,46.4z">  </path>
-			<path id="outline-bg" opacity="0.05" fill="none" stroke="grey" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="       M93.9,46.4c9.3,9.5,13.8,17.9,23.5,17.9s17.5-7.8,17.5-17.5s-7.8-17.6-17.5-17.5c-9.7,0.1-13.3,7.2-22.1,17.1         c-8.9,8.8-15.7,17.9-25.4,17.9s-17.5-7.8-17.5-17.5s7.8-17.5,17.5-17.5S86.2,38.6,93.9,46.4z"></path>
-		</svg>
 	</div>
 </div>
 <div id="navigation" class="navigation">
