--- a/bitrix/templates/main/5-0contact — копия.html
+++ b/bitrix/templates/main/5-0contact — копия.html
@@ -6,7 +6,6 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=1024">
 	<link rel="stylesheet" href="css/screen.css">
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3&amp;key=AIzaSyA5YZJzqmYccat0wSPnagC9TXPP4xTugFM"></script>
 	<script src="js/common.js"></script>
 </head>
 <div class="out">
@@ -61,199 +60,78 @@
 		</div>
 	</div>
 	<div class="wrapper">
-		<section class="section">
+		<section class="section section_contact">
 			<div class="section__head head__projects-inner">
-				<div class="head__projects-bg"><img src="img/projects/projects.jpg" alt=""></div>
-				<div data-speed="5" class="lead parallax">
-					<div class="title"># woodtable</div>
+				<div class="head__projects-bg head-about"></div>
+				<div class="lead">
+					<div class="title"># contacts</div>
 				</div>
-				<div class="head__projects-name">Alfabank Minsk <span>2015</span></div>
 			</div>
-			<div class="container">
-				<div class="task__projects">
-					<div class="product_selector">
-						<div class="product_selector-item">
-							<div class="product__head">Interior design</div>
-						</div>
-						<div class="product_selector-item">
-							<div class="product_selector-title">
-								<div class="heading">
-									<div class="heading-text"><span>Client</span></div>
-								</div>
-							</div>
-							<div class="text">
-								<p>Big Ivanov`s family with 4 childrens <br>and dog Masha</p>
-							</div>
-						</div>
-						<div class="product_selector-item">
-							<div class="product_selector-title">
-								<div class="heading">
-									<div class="heading-text"><span>Task</span></div>
-								</div>
-							</div>
-							<div class="text">
-								<p>Wooden table with a triangular- shaped hole in the middle.  Ideal for business meetings. Each place has a personal outlet for laptop</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="wrapper__galery">
-					<div class="galery__nav"></div>
-					<div class="project__gallery">
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="img/projects/galery1.jpg" alt=""></div>
-						</div>
-					</div>
-					<div class="galery__description-wrapper">
-						<div class="galery__description">
-							<div class="item__description">
-								<div class="heading">
-									<div class="heading-text">1Woodstable in Penthouse<br>Minsk <span> 2015</span></div>
-								</div>
-							</div>
-							<div class="item__description">
-								<div class="heading">
-									<div class="heading-text">2Woodstable in Penthouse<br>Minsk <span> 2015</span></div>
-								</div>
-							</div>
-							<div class="item__description">
-								<div class="heading">
-									<div class="heading-text">3Woodstable in Penthouse<br>Minsk <span> 2015</span></div>
-								</div>
-							</div>
-							<div class="item__description">
-								<div class="heading">
-									<div class="heading-text">4Woodstable in Penthouse<br>Minsk <span> 2015</span></div>
-								</div>
-							</div>
-							<div class="item__description">
-								<div class="heading">
-									<div class="heading-text">5Woodstable in Penthouse<br>Minsk <span> 2015</span></div>
-								</div>
-							</div>
-							<div class="item__description">
-								<div class="heading">
-									<div class="heading-text">6Woodstable in Penthouse<br>Minsk <span> 2015</span></div>
-								</div>
-							</div>
-						</div>
-						<div class="number"><span></span></div>
-						<div class="number__sum"><span>11</span></div>
-					</div>
-					<div class="letters">
-						<div data-direction="1" class="letters_item letters-w parallax">W</div>
-						<div data-speed="50" data-direction="1" class="letters_item letters-b parallax">e</div>
-					</div>
-				</div>
-				<section class="section kredo">
-					<div class="container container__kredo">
-						<div class="task__kredo">
-							<div class="task__kredo-photo"><img data-speed="20" data-direction="1" src="img/projects/kredo.jpg" alt="" class="parallax"></div>
-							<div data-speed="15" data-direction="1" class="task__kredo-text parallax">We make a good<br>job and love our<br>work so much</div>
-						</div>
-					</div>
-					<div class="letters">
-						<div data-speed="15" data-direction="1" class="letters_item letters-s parallax">S</div>
-						<div data-speed="25" data-direction="1" class="letters_item letters-p parallax">P</div>
-						<div data-speed="40" data-direction="1" class="letters_item letters-e parallax">E</div>
-					</div>
-				</section>
+			<div class="head__projects-inner section__map">
+				<div id="map_canvas"></div>
+				<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3&amp;key=AIzaSyA5YZJzqmYccat0wSPnagC9TXPP4xTugFM"></script>
 			</div>
-			<div class="container project__case"> 
-				<div class="task__projects">
-					<div class="product_selector">
-						<div class="product_selector-item">
-							<div class="product__head">Some facts</div>
-						</div>
-						<div data-speed="10" data-direction="1" class="product_selector-item parallax">
-							<div class="product_selector-title">
-								<div class="heading">
-									<div class="heading-text"><span>01</span></div>
-								</div>
-							</div>
-							<div class="text">
-								<p>The project solves the distribution<br>and equipping a workspace of an <br>advertising agency in a building<br>of three free plants in Buenos<br>Aires, Argentina. </p>
-							</div>
-						</div>
-						<div data-speed="10" data-direction="1" class="product_selector-photo photo_left parallax"><img data-speed="10" data-direction="1" src="/img/projects/half.jpg" alt="" class="parallax">
-							<p data-speed="5" data-direction="1" class="text parallax">Two days before the release, Uli Sigg and director<br>Michael Schindhelm attended a screening<br>in Bern</p>
-						</div>
-						<div data-speed="10" data-direction="1" class="product_selector-item fact_2 parallax">
-							<div class="product_selector-title">
-								<div class="heading">
-									<div class="heading-text"><span>02</span></div>
-								</div>
-							</div>
-							<div class="text">
-								<p>The project solves the distribution<br>and equipping a workspace of an <br>advertising agency in a building<br>of three free plants in Buenos<br>Aires, Argentina. </p>
+			<div class="link_case">
+				<button type="button" data-alt-text="-hide map" class="map-trigger link-dash">-view map</button>
+			</div>
+		</section>
+		<section class="section">
+			<div class="contaiber">
+				<div class="c-contact-wrapper">
+					<div class="contact__block">
+						<div class="block-address">
+							<div class="block-address_title">address</div>
+							<div class="block-address_container">
+								<p>220012 Minsk</p>
+								<p>Nezavisimosti prospect</p>
+								<p>177-56 office 56</p>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="letters">
-					<div data-direction="1" class="letters_item letters-r parallax">R</div>
-					<div data-speed="25" data-direction="1" class="letters_item letters-i parallax">I</div>
-					<div data-direction="1" class="letters_item letters-g parallax">G</div>
-					<div data-direction="1" class="letters_item letters-t parallax">T</div>
-				</div>
-				<!--видео по желанию <video autoplay loop></video>-->
-				<div data-speed="15" data-direction="1" class="task__projects parallax">
-					<div class="product_selector">
-						<div class="product_selector-photo photo_right"><img src="/img/projects/here.jpg" alt=""></div>
+					<div class="contact__block">
+						<div class="block-address contact">
+							<ul class="dash-list">
+								<li> <a href="tel:">+375 17 394 21 54</a></li>
+								<li><a href="mailto:" class="mail">PRESTIGE@GMAIL.COM</a></li>
+							</ul>
+						</div>
 					</div>
-				</div>
-				<div class="task__projects">
-					<div class="product_selector">
-						<div class="product_selector-photo photo_center"><img data-speed="15" data-direction="1" src="/img/projects/photo_3.jpg" alt="" class="parallax">
-							<p data-speed="15" data-direction="1" class="text parallax">Two days before the release</p>
+					<div class="contact__block">
+						<div class="contact__block-slogan">
+							<p>Do you want<br>to write us?</p>
+						</div>
+					</div>
+					<div class="contact__block">
+						<div class="contact__block-form">
+							<form action="/message" method="post" name="form-contact">
+								<div class="input__wrapper">
+									<input id="form_name" type="text" required="required" data-validation="length" data-validation-length="min2" class="form__input">
+									<label for="form_name" data-speed="5" class="parallax label__name">name</label>
+								</div>
+								<div class="input__wrapper">
+									<input id="form_mail" type="email" required="required" data-validation="email" class="form__input">
+									<label for="form_mail" data-speed="5" class="parallax label__mail">E-mail</label>
+								</div>
+								<div class="input__wrapper">
+									<div class="wrapper-textarea">
+										<textarea id="form_msg" type="textarea" rows="3" required="required" data-validation="length" data-validation-length="min10" class="form__input"></textarea>
+									</div>
+									<label for="form_msg" data-speed="5" class="parallax label__msg">message</label>
+									<button type="submit" class="form__button">send
+										<div class="icon">
+											<svg viewbox="0 0 41.2 19" xmlns="http://www.w3.org/2000/svg">
+												<path d="m0,8.9l25,0l0,2l-25,0l0,-2z" clip-rule="evenodd" fill-rule="evenodd" class="fill"></path>
+												<path d="m39.2,9.5l-13.5,7.8l0,-15.6l13.5,7.8z" stroke-miterlimit="10" stroke-width="2" fill="none" class="stroke"></path>
+											</svg>
+										</div>
+									</button>
+								</div>
+							</form>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section class="section section__links"><a href="#" data-speed="15" class="links parallax">
-				<div class="section_container">
-					<div class="topper">you can see</div>
-					<div class="middle">
-						<div style="background-image: url('../img/mask.jpg')" class="text">next project</div>
-						<div class="arrow">
-							<div style="background-image: url('../img/icons/arrow.png')" class="icon"></div>
-						</div>
-					</div>
-				</div></a></section>
 	</div>
 	<footer class="footer">
 		<div class="mapping">
@@ -277,12 +155,6 @@
 			<div data-direction="1" class="letters_item letters-e parallax">E</div>
 		</div>
 	</footer>
-	<div class="loader__wrapper">
-		<svg width="300px" height="200px" viewbox="0 0 187.3 93.7" preserveaspectratio="xMidYMid meet" style="left: 50%; top: 50%; position: absolute; transform: translate(-50%, -50%) matrix(1, 0, 0, 1, 0, 0);">
-			<path id="outline" stroke="#fd2f2f" fill="none" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M93.9,46.4c9.3,9.5,13.8,17.9,23.5,17.9s17.5-7.8,17.5-17.5s-7.8-17.6-17.5-17.5c-9.7,0.1-13.3,7.2-22.1,17.1         c-8.9,8.8-15.7,17.9-25.4,17.9s-17.5-7.8-17.5-17.5s7.8-17.5,17.5-17.5S86.2,38.6,93.9,46.4z">  </path>
-			<path id="outline-bg" opacity="0.05" fill="none" stroke="grey" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="       M93.9,46.4c9.3,9.5,13.8,17.9,23.5,17.9s17.5-7.8,17.5-17.5s-7.8-17.6-17.5-17.5c-9.7,0.1-13.3,7.2-22.1,17.1         c-8.9,8.8-15.7,17.9-25.4,17.9s-17.5-7.8-17.5-17.5s7.8-17.5,17.5-17.5S86.2,38.6,93.9,46.4z"></path>
-		</svg>
-	</div>
 </div>
 <div id="navigation" class="navigation">
 	<div class="navigation__container">
@@ -310,7 +182,7 @@
 						<ul>
 							<li><a href="3-1services-inner.html">Mounting</a></li>
 							<li><a href="4-1designers.html">Designers</a></li>
-							<li><a href="404.html">interior design</a></li>
+							<li><a href="#">interior design</a></li>
 						</ul>
 					</ul>
 				</div>
